--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://preetsojitra.me/">
     <link rel="stylesheet" href="./src/css/style.css" />
    <script src="https://kit.fontawesome.com/2aad678ba3.js" crossorigin="anonymous"></script>
     <link
