--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <h1 class="sections-heading">About Me</h1>
             <div class="about-text">
               <p>
-                Hello, I am Preet Sojitra a Frontend Developer and a freelancer
+                Hello, I am Preet Sojitra a Frontend Developer, Open Source enthusiast and a freelancer
                 from India, pursuing undergradution from a university in India.
               </p>
               <p>
@@ -189,10 +189,17 @@
       <div class="skills-container">
         <div class="skill">
           <div class="skill-img">
-            <img src="./src/images/skills/html5.svg" alt="html5" />
+            <img src="./src/images/skills/reactJs.svg" alt="reactJs" />
           </div>
-          <h4>html5</h4>
+          <h4>ReactJs</h4>
         </div>
+        <div class="skill">
+          <div class="skill-img">
+            <img src="./src/images/skills/javascript.svg" alt="javascript" />
+          </div>
+          <h4>javascript</h4>
+        </div>
+        
         <div class="skill">
           <div class="skill-img">
             <img src="./src/images/skills/css3.svg" alt="css3" />
@@ -213,9 +220,9 @@
         </div>
         <div class="skill">
           <div class="skill-img">
-            <img src="./src/images/skills/javascript.svg" alt="javascript" />
+            <img src="./src/images/skills/html5.svg" alt="html5" />
           </div>
-          <h4>javascript</h4>
+          <h4>html5</h4>
         </div>
         <div class="skill">
           <div class="skill-img">
