--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           <div class="project-link">
             <a
               class="viewLink"
-              href="https://thirsty-varahamihira-8302b3.netlify.app/"
+              href="https://gorgeous-pie-31948c.netlify.app/"
               target="_blank"
               >View Here</a
             >
@@ -311,7 +311,7 @@
           <div class="project-link">
             <a
               class="viewLink"
-              href="https://cranky-mccarthy-09598d.netlify.app/"
+              href="https://incredible-sawine-deaec7.netlify.app/"
               target="_blank"
               >View Here</a
             >
