--- a/index.html
+++ b/index.html
@@ -122,17 +122,16 @@
             <h1 class="sections-heading">About Me</h1>
             <div class="about-text">
               <p>
-                Hello, I am Preet Sojitra a Frontend Developer, Open Source enthusiast and a freelancer
-                from India, pursuing undergradution from a university in India.
+                Hello, my name is Preet Sojitra, and I am currently pursuing my undergraduate degree in Computer Science from Pandit Deendayal Energy University in India. As a frontend developer with experience in backend development, I specialize in creating websites for individuals and small businesses.
               </p>
               <p>
-                I am currently available for collaboration regarding projects related to web development.     Feel free to <a class="" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=preet.dev373@gmail.com" target="_blank">contact me</a>.
+                My passion lies in the fields of machine learning and data science, and I am constantly seeking new opportunities to explore and deepen my understanding of these areas. I am also interested in Data Structures and Algorithms and strive to improve my programming skills continually.
               </p>
               <p>
-              I spend my leisure hours reading books. Right now I'm also trying my hand at machine learning and AI. I love to learn and explore new arenas.
+                I am currently available for collaboration regarding projects related to machine learning or web development.Feel free to <a class="" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=preet.dev373@gmail.com" target="_blank">contact me</a>.
               </p>
-               <p>
-               I make websites for people and small businesses. Contact me at <a class="" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=preet.dev373@gmail.com" target="_blank">preet.dev373@gmail.com</a>.
+              <p>
+              Apart from my academic pursuits, I am an avid learner and spend my free time learning about space and the universe.
               </p>
             </div>
           </div>
@@ -189,9 +188,21 @@
       <div class="skills-container">
         <div class="skill">
           <div class="skill-img">
-            <img src="./src/images/skills/reactJs.svg" alt="reactJs" />
+            <img src="./src/images/skills/reactJs.svg" alt="reactJS" />
           </div>
-          <h4>ReactJs</h4>
+          <h4>ReactJS</h4>
+        </div>
+        <div class="skill">
+          <div class="skill-img">
+            <img src="./src/images/skills/node-js.svg" alt="nodeJS" />
+          </div>
+          <h4>NodeJS</h4>
+        </div>
+        <div class="skill">
+          <div class="skill-img">
+            <img src="./src/images/skills/express.svg" alt="expressJS" />
+          </div>
+          <h4>ExpressJS</h4>
         </div>
         <div class="skill">
           <div class="skill-img">
@@ -214,12 +225,6 @@
         </div>
         <div class="skill">
           <div class="skill-img">
-            <img src="./src/images/skills/sass.svg" alt="sass" />
-          </div>
-          <h4>sass</h4>
-        </div>
-        <div class="skill">
-          <div class="skill-img">
             <img src="./src/images/skills/html5.svg" alt="html5" />
           </div>
           <h4>html5</h4>
@@ -229,6 +234,12 @@
             <img src="./src/images/skills/python.svg" alt="python" />
           </div>
           <h4>python</h4>
+        </div>
+        <div class="skill">
+          <div class="skill-img">
+            <img src="./src/images/skills/java.svg" alt="Java" />
+          </div>
+          <h4>java</h4>
         </div>
         <div class="skill">
           <div class="skill-img">
@@ -247,12 +258,6 @@
             <img src="./src/images/skills/figma.svg" alt="figma" />
           </div>
           <h4>figma</h4>
-        </div>
-        <div class="skill">
-          <div class="skill-img">
-            <img src="./src/images/skills/canva.webp" alt="canva" />
-          </div>
-          <h4>canva</h4>
         </div>
       </div>
     </section>
