--- a/index.html
+++ b/index.html
@@ -271,28 +271,28 @@
         <div class="card">
           <div class="image-setting">
             <img
-              src="./src/images/projects/project-1.jpg"
+              src="./src/images/projects/project-1.png"
               alt=""
               class="project-img"
             />
           </div>
 
-          <h3 class="project-sub-heading">Netflix Clone</h3>
+          <h3 class="project-sub-heading">MyTestCompare</h3>
           <p class="project-text">
-           UI clone of Netflix using HTML, CSS and JavaScript
+           Designed and developed a clean and modern fullstack website using MERN where user can book pathology tests online using this platform
           </p>
           <hr class="project-underline" />
 
           <div class="project-link">
             <a
               class="viewLink"
-              href="https://gorgeous-pie-31948c.netlify.app/"
+              href="https://github.com/Preet-Sojitra/MyTestCompareClient"
               target="_blank"
               >View Here</a
             >
             <a
               class="viewLink"
-              href="https://github.com/Preet-Sojitra/Netflix-Landing-Page-Clone"
+              href="https://github.com/Preet-Sojitra/MyTestCompareClient"
               target="_blank"
               >View Code</a
             >
@@ -303,26 +303,27 @@
         <div class="card">
           <div class="image-setting">
             <img
-              src="./src/images/projects/project-2.jpg"
+              src="./src/images/projects/project-2.png"
               alt=""
               class="project-img"
             />
           </div>
-          <h3 class="project-sub-heading">Microsoft Clone</h3>
+          <h3 class="project-sub-heading">NaviDoc</h3>
           <p class="project-text">
-            Microsoft website Clone using TailwindCSS
+            Designed and developed a platform where patients can enter the symptoms of the diseases and our platform will tell
+with what kind of disease they might be suffering from.
           </p>
           <hr class="project-underline" />
           <div class="project-link">
             <a
               class="viewLink"
-              href="https://incredible-sawine-deaec7.netlify.app/"
+              href="https://github.com/Preet-Sojitra/navidoc"
               target="_blank"
               >View Here</a
             >
             <a
               class="viewLink"
-              href="https://github.com/Preet-Sojitra/Microsoft"
+              href="https://github.com/Preet-Sojitra/navidoc"
               target="_blank"
               >View Code</a
             >
@@ -338,21 +339,21 @@
               class="project-img"
             />
           </div>
-          <h3 class="project-sub-heading">Cloud Hosting Website</h3>
+          <h3 class="project-sub-heading">Anirveda Website</h3>
           <p class="project-text">
-            Cloud Hosting Website Using HTML and CSS
+           Website for the technoeconomics clubs of my college built with ReactJS and TailwindCSS.
           </p>
           <hr class="project-underline" />
           <div class="project-link">
             <a
               class="viewLink"
-              href="https://preet-sojitra.github.io/Loruki-Website/"
+              href="https://anirveda.osailpdeu.in/"
               target="_blank"
               >View Here</a
             >
             <a
               class="viewLink"
-              href="https://github.com/Preet-Sojitra/Loruki-Website"
+              href="https://github.com/AnirvedaPDEU/AnirvedaWebsite"
               target="_blank"
               >View Code</a
             >
@@ -363,26 +364,26 @@
         <div class="card">
           <div class="image-setting">
             <img
-              src="./src/images/projects/project-4.jpg"
+              src="./src/images/projects/project-4.png"
               alt=""
               class="project-img"
             />
           </div>
-          <h3 class="project-sub-heading">Grocery-Bud</h3>
+          <h3 class="project-sub-heading">StoreAPI</h3>
           <p class="project-text">
-          Grocery list app using HTML, CSS and JavaScript
+           A basic API made with Node.js and ExpressJS where user can fetch data according to filters
           </p>
           <hr class="project-underline" />
           <div class="project-link">
             <a
               class="viewLink"
-              href="https://preet-sojitra.github.io/Grocery-Bud/"
+              href="https://storeapi-hjc5.onrender.com/"
               target="_blank"
               >View Here</a
             >
             <a
               class="viewLink"
-              href="https://github.com/Preet-Sojitra/Grocery-Bud"
+              href="https://github.com/Preet-Sojitra/StoreAPI"
               target="_blank"
               >View Code</a
             >
